<resources>
    <string name="app_name">ui</string>

    <string name="checkout">Checkout</string>
    <string name="network_connection_error">Sorry - something did not go through! Please check your network connection and try again.</string>
    <string name="default_error">Something went wrong…</string>
    <string name="empty_message">It\'s empty in here.</string>
    <string name="try_again">Try Again</string>
    <string name="close">Close</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email*</string>
    <string name="address">Address*</string>
    <string name="first_name_required">First Name*</string>
    <string name="last_name_required">Last Name*</string>
    <string name="second_address">Address 2</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="country">Country*</string>
    <string name="zip">zip code*</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_required">Phone number*</string>
    <string name="my_cart">My Cart</string>
    <string name="section_see_all">See All</string>
    <string name="default_shipping_address">Default shipping address</string>
    <string name="submit">Submit</string>
    <string name="pay_with_this_card">Pay with this card</string>
    <string name="invalid_address">Invalid address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_default">Set as default</string>
    <string name="done">Done</string>
    <string name="tel_prefix">Tel: %s</string>
    <string name="full_name_pattern">%1$s %2$s</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="total_price">Total</string>
    <string name="order_number_pattern">Order #%d</string>
    <string name="order_date_pattern">Placed on %s</string>
    <string name="email_optionally">Email</string>
    <string name="shop">Shop</string>
    <string name="add_new_address">Add New Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

</resources>
