<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/subtotal"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/subtotalValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <TextView
        android:id="@+id/subtotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/subtotalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subtotalLabel" />

    <TextView
        android:id="@+id/discountLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/discount"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/discountValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalLabel" />

    <TextView
        android:id="@+id/discountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/discountLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/discountLabel" />

    <TextView
        android:id="@+id/shippingLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/shipping"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/shippingValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountLabel" />

    <TextView
        android:id="@+id/shippingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/shippingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shippingLabel" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/total_price"
        android:textAllCaps="true"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/totalValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippingLabel" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/totalLabel" />

    <android.support.constraint.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

</merge>